--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.1",
+    "axios": "^0.21.4",
     "framer-motion": "^4.1.17",
     "next": "latest",
     "react": "^17.0.2",
