--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@headlessui/react": "^1.4.1",
     "@reduxjs/toolkit": "^1.6.1",
     "framer-motion": "^4.1.17",
+    "mongoose": "^6.0.9",
     "next": "latest",
+    "next-auth": "^3.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
