--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-multi-carousel": "^2.6.5",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "stripe": "^8.184.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
