--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stripe/stripe-js": "^1.20.3",
     "bcrypt": "^5.0.1",
     "framer-motion": "^4.1.17",
+    "moment": "^2.29.1",
     "mongoose": "^6.0.9",
     "next": "latest",
     "next-auth": "^3.29.0",
