--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@headlessui/react": "^1.4.1",
     "@reduxjs/toolkit": "^1.6.1",
     "@stripe/stripe-js": "^1.20.3",
+    "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
     "framer-motion": "^4.1.17",
     "moment": "^2.29.1",
