--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.23.0",
     "bcrypt": "^5.0.1",
     "framer-motion": "^4.1.17",
+    "micro": "^9.3.4",
     "moment": "^2.29.1",
     "mongoose": "^6.0.9",
     "next": "latest",
